<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">华人Hbuy</string>
    <string name="order">订单</string>
    <string name="tab_service">服务</string>
    <string name="bt_register">手机号注册</string>
    <string name="hint_username">输入用户名</string>
    <string name="register_hint_verify_pwd">确认密码</string>
    <string name="hint_pwd">6-18位字母数字组合</string>
    <string name="register_email">邮箱</string>
    <string name="register_hint_email">请输入邮箱</string>
    <string name="tv_weixin">微信登录</string>
    <string name="bt_login">登 录</string>
    <string name="tv_pwd">忘记密码 ></string>
    <string name="tv_register">注册账号 ></string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_weixin_fav_key">微信收藏</string>
    <string name="umeng_socialize_female">女</string>
    <string name="umeng_socialize_male">男</string>
    <string name="service_title">服务</string>
    <string name="order_title">华人Hbuy</string>
    <string name="add_pkg">添加包裹</string>
    <string name="tv_name">物流公司</string>
    <string name="et_name_hint">请选择</string>
    <string name="tv_content">包裹内容</string>
    <string name="et_content_hint">请填写包裹内容</string>
    <string name="add_pkg_hint">填写寄往Hbuy的物流单号, 可以随时跟踪物流信息哦。</string>
    <string name="tv_details">查看</string>
    <string name="pkg_details">转运订单</string>
    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>
    <string name="android_auto_update_dialog_title">发现新版本</string>
    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>
    <string name="repo_address">上海普陀区金沙江路1340弄A区7栋3层5室</string>
    <string name="jinyun_hint">亲~邮寄物品分国际管制和国内管制哟!”禁运物品”寄到Hbuy中转仓也没法帮您转运出去呢!为了给您更好的转运体验,请跟随小buy一起了解“禁运物品”有哪些吧！O(∩_∩)O~</string>
    <string name="repo_address_copy_msg">收件人:爱趣买\n收件电话:18521595545\n仓库地址:上海市普陀区金沙江路1340弄A区7栋3层5室\n邮编:200333</string>
    <string name="bt_copy_msg">复制全部信息</string>
    <string name="bt_add_pkg">完成添加</string>
    <string name="stay_pay">待付款</string>
    <string name="tv_hint_hbuy_home">不填单号,包裹已寄往Hbuy</string>
    <string name="waiting_review">处理中</string>
    <string name="wait_signfor">待签收</string>
    <string name="correlation_setting">常用功能</string>
    <string name="preferences">偏好设置</string>
    <string name="overseas_goods_address">海外收货地址</string>
    <string name="edit_address_hint_title">为确保您顺利发货，请使用当地语言填写地址</string>
    <string name="hbuy_repo_address">我的中转地址</string>
    <string name="security_center">安全中心</string>
    <string name="online_customer_service">在线客服</string>
    <string name="about_hbuy">关于Hbuy</string>
    <string name="pkg_empty_text">请先邮寄您的包裹到\nHbuy专属仓库的地址</string>
    <string name="pkg_empty_address">获取地址</string>
    <string name="pkg_empty_chat">联系客服</string>
    <string name="me">我的</string>
    <string name="usename">用户名</string>
    <string name="sex">性别</string>
    <string name="select">请选择物流商家</string>
    <string name="now_nation">现居国家</string>
    <string name="city">城市</string>
    <string name="modity_login_pwd">修改登录密码</string>
    <string name="out_login">退出当前账号</string>
    <string name="save_account_message">保存账号信息</string>
    <string name="old_pwd">输入旧密码</string>
    <string name="old_pwd_hint">旧密码</string>
    <string name="setting_new_pwd">设置新密码</string>
    <string name="setting_new_pwd_hint">6-20位密码,包含英文和数字</string>
    <string name="new_pwd_tow">重复新密码</string>
    <string name="ok_modity">确认修改</string>
    <string name="select_nation">请选择国家</string>
    <string name="input_keyword_hint">请输入关键字</string>
    <string name="add_new_address">添加新地址</string>
    <string name="save">保存</string>
    <string name="consignee">收货人</string>
    <string name="phone">联系电话</string>
    <string name="zip">邮编</string>
    <string name="details_address">详细地址</string>
    <string name="set_default_address">设为默认地址</string>
    <string name="phone_number">18521595545</string>
    <string name="zip_number">200333</string>
    <string name="repo_address_tow">仓库地址</string>
    <string name="repo_address_usename">爱趣买</string>
    <string name="repo_succeed_address">复制地址成功</string>
    <string name="freight_est">运费估算</string>
    <string name="shiping_est">视频简介</string>
    <string name="shiping_est_hint">观看Hbuy宣传视频</string>
    <string name="freight_est_hint">运费想要早知道,我们帮你计算好</string>
    <string name="good">商品</string>
    <string name="good_hint">输入商品名称</string>
    <string name="volume">体积</string>
    <string name="volume_hint">体积</string>
    <string name="weight">重量</string>
    <string name="weight_hint">重量</string>
    <string name="estimate_bt">开始估算</string>
    <string name="tv_hint_net">网络连到木星上去了,请检查网络</string>
    <string name="net_hint">网络连到木星上去了</string>
    <string name="line_payment">在线支付</string>
    <string name="order_name">订单名称</string>
    <string name="payment_money">支付金额(¥)</string>
    <string name="payment_style">选择支付方式</string>
    <string name="payment_weixin">微信支付</string>
    <string name="payment_other">转账汇款</string>
    <string name="payment_zhifubao">支付宝支付</string>
    <string name="ok_payment">确认支付</string>
    <string name="customer_service">客服</string>
    <string name="tv_back">返回登录</string>
    <string name="common_problem">常见问题</string>
    <string name="common_problem_hint">禁运物品/集运条款</string>
    <string name="process_int">流程介绍</string>
    <string name="process_int_hint">不知道怎么买? 没关系, 看这里</string>
    <string name="about_we">关于我们</string>
    <string name="about_we_hint">一流的物流团队, 成熟的业务流程</string>
    <string name="information_feedback">信息反馈</string>
    <string name="information_feedback_ok">确认反馈</string>
    <string name="information_feedback_hint">请输入您要说的话!~</string>
    <string name="complete_data">完善资料</string>
    <string name="new_username">创建账号</string>
    <string name="old_username">绑定账号</string>
    <string name="daigou_hint">代购单</string>
    <string name="daifu_hint">代付单</string>
    <string name="pkg_inland_hint">寄往Hbuy包裹</string>
    <string name="pkg_foreign_hint">已转运包裹</string>
    <string name="transfer_pkg">我的Hbuy私人仓库</string>
    <string name="all_select">全选</string>
    <string name="next">下一步</string>
    <string name="transfer_pkg_hint">您共有2个包裹要转运</string>
    <string name="select_receiver_address">选择收货地址</string>
    <string name="buy_notice_ok">信息无误, 提交代购</string>
    <string name="select_receiver_ok">确认选择</string>
    <string name="select_receiver_manage">管理</string>
    <string name="message_details">消息详情</string>
    <string name="waiting_review_hint">为了能尽快给您安排发货,请配合我们完成审核</string>
    <string name="check_pkg_hint">请处理订单信息</string>
    <string name="check_pkg_hint_msg">去处理</string>
    <string name="create_order_list">结算列表</string>
    <string name="pay">付款</string>
    <string name="pkg">包裹</string>
    <string name="sign_for">已签收</string>
    <string name="service_name">Hbuy客服001(美美)</string>
    <string name="me_message">我的消息</string>
    <string name="waiting_pay">待付款</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="pkg_detail">物流详情</string>
    <string name="touch_us">联系我们</string>
    <string name="modify_address">修改地址</string>
    <string name="my_mai">历史记录</string>
    <string name="logistics_msg">物流信息</string>
    <string name="pay_succeed">付款成功</string>
    <string name="pay_succeed_hint_01">恭喜您,付款成功!</string>
    <string name="pay_succeed_hint_02">马上为您安排发货, 请留意相关信息</string>
    <string name="pay_succeed_hint_03">接下来, 您可以</string>
    <string name="continue_transport">继续转运</string>
    <string name="to_look">去查看</string>
    <string name="transfer_order">转运订单</string>
    <string name="delete_order">删除订单</string>
    <string name="look_pkg">立即拆包</string>
    <string name="pay_order">订单详情</string>
    <string name="order_details">订单详情</string>
    <string name="packing_hint">飞速打包中，稍等片刻~</string>
    <string name="no">订单编号</string>
    <string name="tv_number">物流单号</string>
    <string name="et_numbers_hint">包裹物流单号</string>
    <string name="register_email_hint">请输入邮箱</string>
    <string name="tv_hint_hbuy">填写寄往Hbuy的国内包裹</string>
    <string name="tv_hint_hbuy_xiao">(物流信息首页显示更新)</string>
    <string name="complete_hint">完成</string>
    <string name="bound_hint">绑定</string>
    <string name="bound_hint_username">请输入平台账号</string>
    <string name="bound_hint_pwd">请输入密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="find_pwd2">验证身份</string>
    <string name="weixin_find_pwd">微信找回密码</string>
    <string name="ok_find_pwd">确定</string>
    <string name="find_pwd_text">用户名/邮箱</string>
    <string name="find_pwd_hint">用户名/邮箱/手机号</string>
    <string name="repetition_pwd_tow">重复密码</string>
    <string name="no_net_hint">请连接网络后再试</string>
    <string name="pkg_img_hint">包裹图片</string>
    <string name="email_hint_register">没有手机号?用邮箱注册 ></string>
    <string name="warm_hint">温馨提示</string>
    <string name="warm_hint_nowifi">您当前不是处于wifi下,土豪可以继续哈</string>
    <string name="txt_getMsgCode_validate">获取验证码</string>
    <string name="history_order">历史订单</string>
    <string name="account_setting">账号管理</string>
    <string name="work_order">打包</string>
    <string name="transfer_guide">转运指南</string>
    <string name="buy_guide">代购指南</string>
    <string name="start_transfer">开始打包</string>
    <string name="waiting_submit">待下单</string>
    <string name="logout">注销登录</string>
    <string name="start_ok">开启Hbuy生活之旅</string>
    <string name="history_pkg">历史包裹</string>
    <string name="phone_edit">请输入手机号</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="us_share">分享我们</string>
    <string name="us_check">检查更新</string>
    <string name="us_new_version">当前版本</string>
    <string name="us_net">网络检测</string>
    <string name="us_hbuy">关于我们</string>
    <string name="us_hbuy_web">官方网站\t\twww.hbuy.com.au</string>
    <string name="us_hbuy_weixin">微信公众号\t\taus-hbuy</string>
    <string name="us_hbuy_weibo">新浪微博\t\tHbuy网购国货转运海外服务平台</string>
    <string name="us_hbuy_below">Copyright © 2014 - 2017\n上海澳通信息技术有限公司</string>
    <string name="us_hbuy_phone">客服热线\t\t86 4008-518-880</string>
    <string name="us_hbuy_details">\t\t\t\t爱趣买, 2014年5月成立, 总要业务为海外华人提供国内物品的代购和转运服务。我们以最低的国际运费价格、最快的运输时间, 给您最优质的购物体验。
\n\n\t\t\t\t最低的国际运费价格, 国内转寄澳洲运费6刀起!更快的物流体验, 国内买东西1天就到, 真正与中国0距离！\n\n
\t\t\t\t最贴心的客服, 在转运中我们的客服将全程为您提供咨询服务, 在使用过程中您有什么疑问都可以直接咨询客服, 我们将在第一时间解答您的服务。
</string>
    <string name="buy_list">代购清单</string>
    <string name="buy">代购</string>
    <string name="waitpay_list">代付清单</string>
    <string name="add_buy">添加代购</string>
    <string name="buy_hint">暂时不支持购买虚拟物品</string>
    <string name="edit_address_hint">寄往日本请使用日语填写, 否则可能派送不到哦！</string>
    <string name="edit_address_hint_start">请先选择您要寄往的国家</string>
    <string name="buy_notice_hint">亲, 代购的商品会先发到Hbuy中转地址统一处理~</string>
    <string name="buy_notice_hint01">某商品出现缺货/断货情况的处理办法:</string>
    <string name="buy_notice_hint02">备注信息(其他要求):</string>
    <string name="title_activity_my_coupon">MyCouponActivity</string>
    <string name="buy_name_hint">代购商品链接</string>
    <string name="buy_num_hint">代购商品(个/件)</string>
    <string name="buy_size_hint">尺码、长度、形状</string>
    <string name="buy_mk_hint">备注信息</string>
    <string name="add_wait_pay">添加代付</string>
    <string name="add_wait_pay_hint1">支付宝名或淘宝邮箱/手机号</string>
    <string name="add_wait_pay_hint2">代付金额(人民币 CNY)</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="freight_hint">运费估算</string>
    <string name="freight_hint2">运费早知道, 提前计算好</string>
</resources>